Added h3 descriptive to make the point of the app & screenshot clearer

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,33 +22,14 @@ body {
   font-family: "Livvic", sans-serif;
 }
 
-.App {
-  font-family: sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 button {
   position: absolute;
   left: 50%;
   top: 50%;
-
-  /*
-  Nope =(
-  margin-left: -25%;
-  margin-top: -25%;
-  */
-
-  /* 
-  Yep!
-  */
   transform: translate(-50%, -50%);
   width: 100px;
   border-radius: 30px;
-
   font-family: "Livvic", sans-serif;
-
   font-size: 60px;
   background: #0f2027; /* fallback for old browsers */
   background: -webkit-linear-gradient(
@@ -64,21 +45,33 @@ button {
     #0f2027
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
+  cursor: pointer;
 }
 
 h2 {
   position: absolute;
   left: 50%;
-  top: 40%;
+  top: 37%;
+  transform: translate(-50%, -50%);
+  background: #f953c6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #b91d73,
+    #f953c6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #b91d73,
+    #f953c6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border-radius: 30px;
+  padding: 10px;
+  color: white;
+}
 
-  /*
-  Nope =(
-  margin-left: -25%;
-  margin-top: -25%;
-  */
-
-  /* 
-  Yep!
-  */
+h3 {
+  position: absolute;
+  left: 50%;
+  top: 56%;
   transform: translate(-50%, -50%);
 }
